# Gravia

./: .gitignore  README.md  config.template.md  f001.html  f002.html  f003.html  f004.html  f005.html  f006.html  f007.html  f008.html  f009.html  f010.html  manuscript.bib  manuscript_hpc_mllm.aux  manuscript_hpc_mllm.bbl  manuscript_hpc_mllm.blg  manuscript_hpc_mllm.docx  manuscript_hpc_mllm.md  manuscript_hpc_mllm.out  manuscript_hpc_mllm.tex  presentation.html  pyproject.toml  sov_context_window.json
.gravia/skills/: sys-env-xcode-bootstrap.md
gravia/: __init__.py  cli.py  config.py  config_loader.py  utils.py
gravia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gravia/bridger/: SKILL.md  __init__.py  bridger.py  setup.py  test_loopback.py
gravia/deepread/: __init__.py  engine.py
gravia/geval/: README.md  __init__.py  engine.py
gravia/orchestrator/: manager.py  theta_autopsy.py
gravia/slidetheater/: __init__.py  engine.py
gravia/slidetheater/templates/: madelane.html.j2
gravia/tools/: academic_formatter.py  docx_exporter.py  semantic_formatter.py  visual_auditor.py
gravia/writer/: __init__.py  engine.py
gravia/writer/templates/: biorxiv.tex.j2
scratch/: generate_deck.py
